--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,25 +1,15 @@
 footer.footer 
     .container
         .footer__top.row.no-gutters
-            .footer__block.col-lg-4.col-md-6.col-12
+            .footer__block.col-md-6.col-12
                 a.footer__logo.footer__title.title.title--mini(href="/") MainBit
                 p.footer__info.text.text--caption
                     | Сайты, приложения, фирменные стили.
                     | Медиа-кампании в&nbsp;интернете
-            .footer__block.col-lg-4.col-md-6.col-12
+            .footer__block.col-md-6.col-12
                 a.footer__title.title.title--mini(href="tel:+74959782708") +7 495 978-27-08
                 a.footer__mail.text.text--caption(href="mailto:info@mainbit.ru") info@mainbit.ru
-                p.footer__info.text.text--caption
-                    | Москва, ул. Береговой проезд, д.&nbsp;2, стр.&nbsp;3
-            .footer__block.col-lg-4.col-md-6.col-12
-                .footer__title.title.title--mini Мы в соц. сетях
-                ul.footer__socials
-                    li.footer__social 
-                        a.footer__link.text.text--caption(href="" target="_blank") Facebook
-                    li.footer__social 
-                        a.footer__link.text.text--caption(href="" target="_blank") Twitter
-                    li.footer__social 
-                        a.footer__link.text.text--caption(href="" target="_blank") Vkontakte
-                a.text.text--caption(href="#0") English Version
+                p.footer__address.text.text--caption
+                    | Москва, Старопетровский проезд, д. 7а, стр.&nbsp;6, оф.&nbsp;600
         .footer__bottom
             p.footer__copyright &copy;&nbsp;2010-2024 Студия MainBit
