--- a/src/sections/portfolio/portfolio.pug
+++ b/src/sections/portfolio/portfolio.pug
@@ -18,46 +18,82 @@ mixin SectionPortfolio
                         .portfolio__picture
                             img.portfolio__image(src="/src/images/portfolio-01.jpg", alt="Проект")
                         .portfolio__trigger
-                            <svg class="arrow" width="51" height="48" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
-                            </svg>
+                            .arrow
+                                <svg class="arrow__icon" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
+                                </svg>
+                        .portfolio__info
+                            .portfolio__info-inner
+                                .portfolio__info-content
+                                    .portfolio__info-title.title.title--mini Шаблоны интернет-магазина La Maree
+                                    p.portfolio__info-text.text.text--body Разработали дизайн-макеты для нового интернет-магазина и&nbsp;проконтролировали его сборку
                 .portfolio__item.col-md-6.col
                     a.portfolio__link(href="#0") 
                         .portfolio__picture
                             img.portfolio__image(src="/src/images/portfolio-02.jpg", alt="Проект")
                         .portfolio__trigger
-                            <svg class="arrow" width="51" height="48" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
-                            </svg>
+                            .arrow
+                                <svg class="arrow__icon" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
+                                </svg>
+                        .portfolio__info
+                            .portfolio__info-inner
+                                .portfolio__info-content
+                                    .portfolio__info-title.title.title--mini Шаблоны интернет-магазина La Maree
+                                    p.portfolio__info-text.text.text--body Разработали дизайн-макеты для нового интернет-магазина и&nbsp;проконтролировали его сборку
                 .portfolio__item.col-md-6.col
                     a.portfolio__link(href="#0") 
                         .portfolio__picture
                             img.portfolio__image(src="/src/images/portfolio-03.jpg", alt="Проект")
                         .portfolio__trigger
-                            <svg class="arrow" width="51" height="48" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
-                            </svg>
+                            .arrow
+                                <svg class="arrow__icon" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
+                                </svg>
+                        .portfolio__info
+                            .portfolio__info-inner
+                                .portfolio__info-content
+                                    .portfolio__info-title.title.title--mini Шаблоны интернет-магазина La Maree
+                                    p.portfolio__info-text.text.text--body Разработали дизайн-макеты для нового интернет-магазина и&nbsp;проконтролировали его сборку
                 .portfolio__item.col-md-6.col
                     a.portfolio__link(href="#0") 
                         .portfolio__picture
                             img.portfolio__image(src="/src/images/portfolio-04.jpg", alt="Проект")
                         .portfolio__trigger
-                            <svg class="arrow" width="51" height="48" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
-                            </svg>
+                            .arrow
+                                <svg class="arrow__icon" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
+                                </svg>
+                        .portfolio__info
+                            .portfolio__info-inner
+                                .portfolio__info-content
+                                    .portfolio__info-title.title.title--mini Шаблоны интернет-магазина La Maree
+                                    p.portfolio__info-text.text.text--body Разработали дизайн-макеты для нового интернет-магазина и&nbsp;проконтролировали его сборку
                 .portfolio__item.col-md-6.col
                     a.portfolio__link(href="#0") 
                         .portfolio__picture
                             img.portfolio__image(src="/src/images/portfolio-05.jpg", alt="Проект")
                         .portfolio__trigger
-                            <svg class="arrow" width="51" height="48" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
-                            </svg>
+                            .arrow
+                                <svg class="arrow__icon" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
+                                </svg>
+                        .portfolio__info
+                            .portfolio__info-inner
+                                .portfolio__info-content
+                                    .portfolio__info-title.title.title--mini Шаблоны интернет-магазина La Maree
+                                    p.portfolio__info-text.text.text--body Разработали дизайн-макеты для нового интернет-магазина и&nbsp;проконтролировали его сборку
                 .portfolio__item.col-md-6.col
                     a.portfolio__link(href="#0") 
                         .portfolio__picture
                             img.portfolio__image(src="/src/images/portfolio-06.jpg", alt="Проект")
                         .portfolio__trigger
-                            <svg class="arrow" width="51" height="48" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
-                            </svg>
+                            .arrow
+                                <svg class="arrow__icon" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
+                                </svg>
+                        .portfolio__info
+                            .portfolio__info-inner
+                                .portfolio__info-content
+                                    .portfolio__info-title.title.title--mini Шаблоны интернет-магазина La Maree
+                                    p.portfolio__info-text.text.text--body Разработали дизайн-макеты для нового интернет-магазина и&nbsp;проконтролировали его сборку
