--- a/src/sections/reviews/reviews.pug
+++ b/src/sections/reviews/reviews.pug
@@ -23,17 +23,19 @@ mixin SectionReviews()
                                     | а&nbsp;также разработку элементов фирменного стиля и&nbsp;другие 
                                     | проведенные работы. С&nbsp;MainBit мы&nbsp;работаем уже не&nbsp;первый 
                                     | год и&nbsp;надеемся на&nbsp;продолжение плодотворного.
-                                <img src="https://mainbit.ru/upload/iblock/b13/0iez9kflcb8ya7o6lkupdzfeiy7oksbr.svg" alt="Подпись" class="reviews__signature">
                                 a.reviews__link.link.link--dark.link--dashed.text(href="#0" data-print="https://mainbit.ru/upload/iblock/4ed/bgp7yf1iw02hqnynva6zyx20s2tmq24p.jpg")
                                     span.link__text Посмотреть отзыв
+                                <img src="https://mainbit.ru/upload/iblock/b13/0iez9kflcb8ya7o6lkupdzfeiy7oksbr.svg" alt="Подпись" class="reviews__signature">
                                 .reviews__arrow.reviews__prev
-                                    <svg class="arrow" width="51" height="48" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
-                                    </svg>
+                                    .arrow 
+                                        <svg class="arrow__icon" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
+                                        </svg>
                                 .reviews__arrow.reviews__next
-                                    <svg class="arrow" width="51" height="48" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
-                                    </svg>
+                                    .arrow 
+                                        <svg class="arrow__icon" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
+                                        </svg>
                             .reviews__author 
                                 .reviews__author-name.title.title--note Ольга Широкова
                                 .reviews__author-post.text.text--note Директор по&nbsp;маркетингу LaMaree
@@ -44,17 +46,19 @@ mixin SectionReviews()
                                     | и с интересом отнеслись к особенностям нашей работы. Они нашли 
                                     | выгодные решения для сайта с учетом имеющихся условий, а также 
                                     | пошли навстречу в финансовых вопросах.
-                                <img src="https://mainbit.ru/upload/iblock/b13/0iez9kflcb8ya7o6lkupdzfeiy7oksbr.svg" alt="Подпись" class="reviews__signature">
                                 a.reviews__link.link.link--dark.link--dashed.text(href="#0" data-print="https://mainbit.ru/upload/iblock/69e/3rmchqrynpwxz0sdwxn00tw7a914hi8e.jpg")
                                     span.link__text Посмотреть отзыв
+                                <img src="https://mainbit.ru/upload/iblock/b13/0iez9kflcb8ya7o6lkupdzfeiy7oksbr.svg" alt="Подпись" class="reviews__signature">
                                 .reviews__arrow.reviews__prev
-                                    <svg class="arrow" width="51" height="48" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
-                                    </svg>
+                                    .arrow 
+                                        <svg class="arrow__icon" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
+                                        </svg>
                                 .reviews__arrow.reviews__next
-                                    <svg class="arrow" width="51" height="48" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
-                                    </svg>
+                                    .arrow 
+                                        <svg class="arrow__icon" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
+                                        </svg>
                             .reviews__author 
                                 .reviews__author-name.title.title--note Максим Коротков
                                 .reviews__author-post.text.text--note Испольнительный лиректор Rolston
@@ -65,17 +69,19 @@ mixin SectionReviews()
                                     | а&nbsp;также разработку элементов фирменного стиля и&nbsp;другие 
                                     | проведенные работы. С&nbsp;MainBit мы&nbsp;работаем уже не&nbsp;первый 
                                     | год и&nbsp;надеемся на&nbsp;продолжение плодотворного сотрудничества.
-                                <img src="https://mainbit.ru/upload/iblock/b13/0iez9kflcb8ya7o6lkupdzfeiy7oksbr.svg" alt="Подпись" class="reviews__signature">
                                 a.reviews__link.link.link--dark.link--dashed.text(href="#0" data-print="https://mainbit.ru/upload/iblock/756/o2we0xq1ynvc94binin7wfkjmpjhdy93.jpg")
                                     span.link__text Посмотреть отзыв
+                                <img src="https://mainbit.ru/upload/iblock/b13/0iez9kflcb8ya7o6lkupdzfeiy7oksbr.svg" alt="Подпись" class="reviews__signature">
                                 .reviews__arrow.reviews__prev
-                                    <svg class="arrow" width="51" height="48" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
-                                    </svg>
+                                    .arrow 
+                                        <svg class="arrow__icon" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
+                                        </svg>
                                 .reviews__arrow.reviews__next
-                                    <svg class="arrow" width="51" height="48" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
-                                    </svg>
+                                    .arrow 
+                                        <svg class="arrow__icon" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
+                                        </svg>
                             .reviews__author 
                                 .reviews__author-name.title.title--note Ольга Широкова
                                 .reviews__author-post.text.text--note Директор по&nbsp;маркетингу LaMaree
@@ -86,17 +92,19 @@ mixin SectionReviews()
                                     | а&nbsp;также разработку элементов фирменного стиля и&nbsp;другие 
                                     | проведенные работы. С&nbsp;MainBit мы&nbsp;работаем уже не&nbsp;первый 
                                     | год и&nbsp;надеемся на&nbsp;продолжение плодотворного сотрудничества.
-                                <img src="https://mainbit.ru/upload/iblock/b13/0iez9kflcb8ya7o6lkupdzfeiy7oksbr.svg" alt="Подпись" class="reviews__signature">
                                 a.reviews__link.link.link--dark.link--dashed.text(href="#0" data-print="https://mainbit.ru/upload/iblock/fbc/c18z4m1hgymimbjyevoo1fpgrprnucjn.jpg")
                                     span.link__text Посмотреть отзыв
+                                <img src="https://mainbit.ru/upload/iblock/b13/0iez9kflcb8ya7o6lkupdzfeiy7oksbr.svg" alt="Подпись" class="reviews__signature">
                                 .reviews__arrow.reviews__prev
-                                    <svg class="arrow" width="51" height="48" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
-                                    </svg>
+                                    .arrow 
+                                        <svg class="arrow__icon" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
+                                        </svg>
                                 .reviews__arrow.reviews__next
-                                    <svg class="arrow" width="51" height="48" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
-                                    </svg>
+                                    .arrow 
+                                        <svg class="arrow__icon" viewBox="0 0 51 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M35.9865 28H0V20H36.303L23.9628 5.60306L30.0369 0.396729L50.3294 24.0714L28.966 47.6835L23.0337 42.3162L35.9865 28Z" fill="white"/>
+                                        </svg>
                             .reviews__author 
                                 .reviews__author-name.title.title--note Ольга Широкова
                                 .reviews__author-post.text.text--note Директор по&nbsp;маркетингу LaMaree
