--- a/src/sections/reviews/reviews.scss
+++ b/src/sections/reviews/reviews.scss
@@ -22,8 +22,8 @@
     & .swiper {
         overflow: visible;
         &-pagination {
-            margin-top: 10px;
-            @media (min-width: 768px) {
+            margin-top: 40px;
+            @media (min-width: 576px) {
                 display: none;
             }
         }
@@ -80,7 +80,8 @@
         }
     }
     &__link {
-        margin-top: 33px;
+        display: block;
+        margin-top: 30px;
         font-size: 20px;
         line-height: 1.5;
         letter-spacing: unset;
@@ -113,7 +114,7 @@
         position: absolute;
         top: 50%;
         transition: $transition;
-        @media (min-width: 576px) {
+        @media (min-width: 768px) {
             display: block;
         }
     }
