--- a/src/pages/sozdanie.pug
+++ b/src/pages/sozdanie.pug
@@ -165,6 +165,8 @@
 
             +SectionForm
 
+            +print
+
         include ../components/footer/footer
     
     <script type="module" src="/src/js/index.js"></script>
